clean console log, fixed spacing help page

--- a/public/stylesheets/help.css
+++ b/public/stylesheets/help.css
@@ -1,3 +1,7 @@
+.user-cards {
+    padding-left: 10px;
+}
+
 .dash-item h4 {
     text-align: center;
     padding-top: 20px;
@@ -20,4 +24,8 @@
 .small-title-two {
     padding: 0px 0 0 20px;
     font-weight: 500;
+}
+
+.user-cards {
+    padding-left: 10px;
 }
